Sim  assumptions/limitations.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -311,8 +311,7 @@ We found that the sensitivity of the gREM to inaccurate parameter estimates was 
 
 Although the REM has been found to be effective in field tests \citet{rowcliffe2008estimating, zero2013monitoring}, the gREM requires further validation by both field tests and simulations. For example capture-mark-recapture methods could be used alongside the gREM to test the accuracy under field conditions \citet{rowcliffe2008estimating}. While we found no effect of movement on the accuracy or precision of the gREM, the movement models we have used in our simulations to validate the gREM are still simple representations of true animal movement. Animal movement may be highly nonlinear and often dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}, therefore testing the gREM against real animal data, or further simulations with more complex movement models would be beneficial.
 
-
-Within the simulation we have assumed an equal density across the study area, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between sensor sites. Though theoretically unequal densities should not affect accuracy \citep{Hutchinson_Waser_2007}, it will affect precision and further simulations should be used to quantify this effect. We allowed the sensor to be stationary and continuously detecting, negating the triggering, and non-continuous recording issues that could exist with some sensors. In the simulation animals moved at a speed of $\SI{40}{\kilo\meter \per \day}$, equivalent to the largest day range of terrestrial animals \citep{carbone2005far}. Other speed values should not alter the accuracy of the gREM, however, precision would be affected, all else being equal, since slower speeds produce fewer records. We also assume perfect knowledge of the average speed of an animal and size of the detection zone. All of which may lead to possible bias or a decrease in precision. 
+The assumptions of our simulations may require further consideration for example we have assumed an equal density across the study area. However in a field environment the situation may be more complex, with additional variation coming from local changes in density between sensor sites. Though theoretically unequal densities should not affect accuracy \citep{Hutchinson_Waser_2007}, it will affect precision and further simulations should be used to quantify this effect. Additionally, we allowed the sensor to be stationary and continuously detecting, negating the triggering, and non-continuous recording issues that could exist with some sensors and reduce precision or accuracy. Finally, in the simulation animals moved at the equivalent of the largest day range of terrestrial animals \citep{carbone2005far}. Slower speed values should not alter the accuracy of the gREM, but precision would be affected since slower speeds produce fewer records. 
 
 Detection probability is a major focus for methods estimating density. The gREM does not fit a statistical model to estimate detection probability as occupancy models and distance sampling do \citep{royle2003estimating, barlow2005estimates, marques2011estimating}. Instead it explicitely models the process, with animals only being detected if they approach the sensor from a suitable direction. More detailed models of this process could include the regularity of acoustic calls or other details. 
 
