Intro first para refs removed.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -109,7 +109,8 @@ Acoustic detection, camera traps, marine, population monitoring, simulations, te
 
 \section*{Introduction}
 
-Animal population density is one of the fundamental measures in ecology and conservation. The density of a population has important implications for a range of issues such as sensitivity to stochastic fluctuations \citep{richter1972extinction, wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropogenic pressure is becoming increasingly important as humans rapidly modify habitats and change climates \citep{everatt2014trophic}. Sensor technology, such as camera traps \citep{karanth1995estimating, rowcliffe2008surveys} and acoustic detectors \citep{clark1995application, acevedo2006using, walters2012continental} are becoming widely used to monitor changes in animal populations \citep{rowcliffe2008surveys, kessel2014review, walters2013challenges}, as they are efficient, relativity cheap and non-invasive \citep{cutler1999using}, allowing for surveys over large areas and long periods. However, converting sampled count data into estimates of density is problematic as detectability of animals needs to be accounted for \citep{anderson2001need}.
+
+The density of animal populations is one of the fundamental measures in ecology and conservation and has important implications for a range of issues, such as sensitivity to stochastic fluctuations \citep{wright1983stochastic} and extinction risk \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropogenic pressure is becoming increasingly important as humans rapidly modify habitats and change climates \citep{everatt2014trophic}. Sensor technology, such as camera traps \citep{karanth1995estimating, rowcliffe2008surveys} and acoustic detectors \citep{acevedo2006using, walters2012continental} are widely used to monitor changes in animal populations as they are efficient, relativity cheap and non-invasive, allowing for surveys over large areas and long periods \citep{rowcliffe2008surveys, kessel2014review, walters2013challenges}. However, converting sampled count data into estimates of density is problematic as detectability of animals needs to be accounted for \citep{anderson2001need}.
 
 Existing methods for estimating animal density often require additional information that is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require estimates of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. When individuals cannot be told apart, an extension of occupancy modelling can be used to estimate absolute abundance \citep{royle2003estimating}. However, as the model is originally formulated to estimate occupancy,  count information is simplified to presence--absence data. Assumptions about the distribution of individuals (e.g. a poisson distribution) must also be made \citep{royle2003estimating} which may be a poor assumption for nonrandomly distributed species. Furthermore repeat, independent surveys must be performed and the definition of a site can be difficult, especially for wide-ranging species \citep{mackenzie2005designing}.
 
@@ -316,12 +317,23 @@ The assumptions of our simulations may require further consideration for example
 Detection probability is a major focus for methods estimating density. The gREM does not fit a statistical model to estimate detection probability as occupancy models and distance sampling do \citep{royle2003estimating, barlow2005estimates, marques2011estimating}. Instead it explicitely models the process, with animals only being detected if they approach the sensor from a suitable direction. More detailed models of this process could include the regularity of acoustic calls or other details. 
 
 \subsection*{Implications for ecology and conservation}
-The gREM can estimate densities of a number of taxa where no, or few, accurate methods currently exist to measure absolute animal density and trends in absolute abundances \citep{thomas2012passive}. Many of these species are critically endangered and monitoring their populations is of conservation interest. For example, current methods of density estimation for the threatened Francisana dolphin (\emph{Pontoporia blainvillei}) may result in underestimation of their numbers \citep{crespo2010abundance}. Our method may also be important for understanding zoonotic diseases, for example estimating population sizes of echolocating bats, which are an important reservoir of infectious disease that affect humans, livestock and wildlife \citep{calisher2006bats}. In addition, using gREM it may be easier than other methods to measure the density of animals which may be useful in quantifying ecosystem services, such as studying the levels of songbirds which are known to have a positive influence on pest control in coffee production \citep{jirinec2011roosting}. The gREM is suitable for any species that would be consistently recorded within range of a detector, such as echolocating bats \citep{kunz2009methods}, songbirds \citep{buckland2006point}, whales \citep{marques2009estimating} or forest primates \citep{hassel2008reliable}. With increasing technological capabilities, this list of species is likely to increase dramatically. Finally, the passive sensor methods that the gREM use are noninvasive and do not require individual marking \citep{jewell2013effect} or naturally identifying marks (as required for mark-recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources \citep{kelly2012noninvasive}. It also makes them suitable for species that are under pressure, species that cannot naturally be individually recognised or species that are difficult or dangerous to catch \citep{thomas2012passive}.
+
+% These new submodels ###
+The gREM is suitable for any species that would be consistently recorded within range of a detector, such as echolocating bats \citep{kunz2009methods}, songbirds \citep{buckland2006point}, whales \citep{marques2009estimating} or forest primates \citep{hassel2008reliable}. With increasing technological capabilities, this list of species is likely to increase dramatically. 
+
+The gREM will aid researchers in studying species with non-invasive methods such as remote sensors which makes it suitable for large, continuous monitoring projects with limited human resources \citep{kelly2012noninvasive} and also makes them suitable for species that are sensitive to human contact or species that are difficult or dangerous to catch \citep{thomas2012passive}.
+
+Many of these species are critically endangered and monitoring their populations is of conservation interest. For example, density estimation for the threatened Francisana dolphin (\emph{Pontoporia blainvillei}) \citep{crespo2010abundance}. In addition, using gREM it may be easier than other methods to measure the density of animals which may be useful in quantifying ecosystem services, such as songbirds with a known positive influence on pest control \citep{jirinec2011roosting}.
+
+% The gREM also allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including songbirds \citep{blumstein2011acoustic}, dolphins \citep{lammers2003directionality}, as well as echolocating bats \citep{walters2013challenges}.   Finally, the passive sensor methods that the gREM use are noninvasive and do not require individual marking \citep{jewell2013effect} or naturally identifying marks (as required for mark-recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources \citep{kelly2012noninvasive}. It also makes them suitable for species that are under pressure, species that cannot naturally be individually recognised 
+
+
+
 
 
 %%%% ------- Acknowledgments ---------%%%%
 \section*{Acknowledgments}
-We thank Hilde Wilkinson-Herbot, Chris Carbone, Francois Balloux, Andrew Cunningham, and Steve Hailes for comments on previous versions of the manuscript. This study was funded through CoMPLEX PhD studentships at University College London supported by BBSRC and EPSRC (EAM and TCDL); The Darwin Initiative (Awards 15003, 161333, EIDPR075 to KEJ), and The Leverhulme Trust (Philip Leverhulme Prize for KEJ).
+We thank Hilde Wilkinson-Herbot, Chris Carbone, Francois Balloux, Andrew Cunningham, Steve Hailes, Richard Glennie and an anonymous referee for comments on previous versions of the manuscript. This study was funded through CoMPLEX PhD studentships at University College London supported by BBSRC and EPSRC (EAM and TCDL); The Darwin Initiative (Awards 15003, 161333, EIDPR075 to KEJ), and The Leverhulme Trust (Philip Leverhulme Prize for KEJ).
 
 \bibliographystyle{mee.bst}	
 \bibliography{lucas-moorcroft-etal-refs.bib}	
