changes for kate.

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -4090,7 +4090,7 @@ The seasonal movements of Eidolon helvum, Myonycteris torquata, and Nanonycteris
 	Author = {Adams, A.M. and Jantzen, M.K. and Hamilton, R.M. and Fenton, M.B.},
 	Journal = {Methods in Ecology and Evolution},
 	Publisher = {Wiley Online Library},
-	Title = {Do you hear what I hear? {I}mplications of detector selection for acoustic monitoring of bats},
+	Title = {Do you hear what {I} hear? {I}mplications of detector selection for acoustic monitoring of bats},
 	Year = {2012}}
 
 @article{lo2008emergence,
