--- a/gREM_ms_revisions_KJ.tex
+++ b/gREM_ms_revisions_KJ.tex
@@ -321,7 +321,7 @@ We thank Hilde Wilkinson-Herbot, Chris Carbone, Francois Balloux, Andrew Cunning
 %%%% ------- Data Accessibility ---------%%%%
 \section*{Data Accessibility}
 
-All code used in this paper are available on Github \url{}.
+The code used in this paper is available on \url{https://github.com/timcdlucas/lucasMoorcroftManuscript/tree/postPeerReview}{Github}.
 
 \bibliographystyle{mee.bst}	
 \bibliography{lucas-moorcroft-etal-refs.bib}	
