Unneeded packages removed from ms.

--- a/gREM_ms_revisions_2015-01-19.tex
+++ b/gREM_ms_revisions_2015-01-19.tex
@@ -3,7 +3,7 @@
 \usepackage[footnotesize]{caption}
 
 
-\usepackage{amsfonts, fancyhdr, graphicx, lastpage, rotating, multirow, fixltx2e, stfloats, txfonts, palatino, url, xcolor, multicol, hanging, setspace, lscape, paralist, changepage, subcaption, array, verbatim, setspace, siunitx,  flafter}
+\usepackage{amsfonts, fancyhdr, graphicx, lastpage, multirow, fixltx2e, stfloats, url, xcolor, subcaption, array, verbatim, setspace, siunitx,  flafter}
 \usepackage[running, displaymath, mathlines]{lineno} % running vs pagewise 
 \usepackage{epstopdf}
 \captionsetup{
@@ -21,7 +21,7 @@
 
 \usepackage{csquotes}
 \usepackage{fancyhdr} 
-%\fancyhf{}
+
 \lhead{}
 \rhead{}
 \chead{Lucas \emph{et al.} A generalised random encounter model for animals}
@@ -52,7 +52,7 @@
 
 \subsection*{ Running title: A generalised random encounter model for animals}
 
-\subsection*{ Word count:} 7170
+\subsection*{ Word count:} 7164
 
 \subsection*{ Authors:\\}
 Tim C.D. Lucas\textsuperscript{1,2,3}$\dagger$, Elizabeth A. Moorcroft\textsuperscript{1,4,5}$\dagger$, Robin Freeman\textsuperscript{5}, Marcus J. Rowcliffe\textsuperscript{5}, Kate E. Jones\textsuperscript{2,5}
@@ -321,7 +321,7 @@ We thank Hilde Wilkinson-Herbot, Chris Carbone, Francois Balloux, Andrew Cunning
 %%%% ------- Data Accessibility ---------%%%%
 \section*{Data Accessibility}
 
-The code used in this paper is available on Github at https://github.com/timcdlucas/lucasMoorcroftManuscript/tree/postPeerReview.
+The code used in this paper is available on Github at \url{https://github.com/timcdlucas/lucasMoorcroftManuscript/tree/postPeerReview}.
 
 \bibliographystyle{mee.bst}	
 \bibliography{lucas-moorcroft-etal-refs.bib}	
