Rename most files to be more obvious. lucas_et_al... for most stuff. figure1-7b for figures.

--- a/supplementary-material/REM-methods.tex
+++ b/supplementary-material/REM-methods.tex
@@ -5,7 +5,7 @@ Following \cite{yapp1956theory}, we derive the gas model where sensors can captu
 
 \begin{figure}[b]
 \centering
-\includegraphics[width=0.6\textwidth]{../imgs/equalRegions.pdf}
+\includegraphics[width=0.6\textwidth]{../imgs/lucas_et_al_figure2.pdf}
 
 \caption{Locations where derivation of the average profile $\bar{p}$ is the same for different combinations of sensor detection and animal signal widths. Symbols within each polygon refer to each gREM submodel named after their compass point, except for Gas and REM which highlight the position of these previously derived models within the gREM. Symbols on the edge of the plot are for submodels where $\alpha, \theta = 2\pi$}
 \label{f:equalRegions}
