--- a/lucas_et_al_mainms_2015-01-20.tex
+++ b/lucas_et_al_mainms_2015-01-20.tex
@@ -131,7 +131,7 @@ The REM presented by \citet{rowcliffe2008estimating} adapts the gas model to cou
 %%% Put in new diagram.
 \begin{figure}[t]
         \centering
-	\includegraphics[width=4cm]{imgs/angleDefinitions.pdf}
+	\includegraphics[width=4cm]{imgs/lucas_et_al_figure1.pdf}
 
 \caption{Representation of sensor detection width and animal signal width. The filled square and circle represent a sensor and an animal, respectively; $\theta$, sensor detection width (radians); $r$, sensor detection distance; dark grey shaded area, sensor detection zone; $\alpha$, animal signal width (radians). Dashed lines around the filled square and circle represents the maximum extent of $\theta$ and $\alpha$, respectively.} 
 \label{f:AngleDef}
@@ -151,7 +151,7 @@ Different combinations of $\theta$ and $\alpha$ would be expected to occur (e.g.
 
 \begin{figure}
 \centering
-\includegraphics[width=7cm]{imgs/equalRegions.pdf}
+\includegraphics[width=7cm]{imgs/lucas_et_al_figure2.pdf}
 \caption{Locations where derivation of the average profile $\bar{p}$ is the same for different combinations of sensor detection and animal signal widths. Symbols within each polygon refer to each gREM submodel named after their compass point, except for Gas and REM which highlight the position of these previously derived models within the gREM. Symbols on the edge of the plot are for submodels where $\alpha, \theta = 2\pi$}
 \label{f:equalRegions}
 \end{figure}
@@ -169,7 +169,7 @@ Starting from $x_1 = \pi/2$ until $\theta/2 + \pi/2 - \alpha/2$, the size of the
 
 \begin{figure}[t]
         \centering
-	\includegraphics[width=7cm]{imgs/fourIntegrals.pdf}
+	\includegraphics[width=7cm]{imgs/lucas_et_al_figure3.pdf}
 \caption{An overview of the derivation of the average profile $\bar{p}$ for the gREM submodel SE2, where (a) shows the location of the profile $p$ (the line an animal must pass through in order to be captured) in red and the focal angle, $x_1$, for an animal (filled circle), its signal (unfilled sector), and direction of movement (shown as an arrow). The detection zone of the sensor is shown as a filled grey sector with a detection distance of $r$. The vertical black line within the circle shows the direction the sensor is facing. The derivation of $p$ changes as the animal approaches the sensor from different directions (shown in b-d), where (b) is the derivation of $p$ when $x_1$ is in the interval $\lbrack\frac{\pi}{2}, \frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}\rbrack$, (c)  $p$ when $x_1$ is in the interval $\lbrack\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}, \frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2} \rbrack$ and (d) $p$ when $x_1$ is in the interval $\lbrack\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}, \frac{3 \pi}{2}\rbrack$, where $\theta$, sensor detection width; $\alpha$, animal signal width. The resultant equation for $p$ is shown beneath b-d. The average profile $\bar{p}$ is the size of the profile averaged across all approach angles.}
  	\label{f:x1AndInt}
 
@@ -215,7 +215,7 @@ The equation for $\bar{p}$ has been newly derived for each submodel in the gREM,
 
 \begin{figure}
 	\centering
-	\includegraphics[width=7cm]{imgs/equalModelResults.pdf}
+	\includegraphics[width=7cm]{imgs/lucas_et_al_figure4.pdf}
 	\caption{Expressions for the average profile width, $\bar{p}$, given a range of sensor and signal widths. Despite independent derivation within each block, many models result in the same expression. These are collected together and presented as one block of colour. Expressions on the edge of the plot are for submodels with $\alpha, \theta = 2\pi$. }
 	\label{f:equalModelResults}
 \end{figure}
@@ -229,7 +229,7 @@ All gREM submodels showed a high accuracy, i.e., the median difference between t
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[width=7cm]{imgs/AverageModelBias.pdf}
+	\includegraphics[width=7cm]{imgs/lucas_et_al_figure5.pdf}
        	\caption{Simulation model results of the accuracy and precision for gREM submodels. The percentage error between estimated and true density for each gREM sub model is shown within each box plot, where the black line represents the median percentage error across all simulations, boxes represent the middle 50\% of the data, whiskers represent variability outside the upper and lower quartiles with outliers plotted as individual points. Box colours correspond to the expressions for average profile width $\bar{p}$ given in Figure 4.        
 } 
 	\label{f:ModelBias}
@@ -241,7 +241,7 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the accuracy was not
 
 \begin{figure}[t]
        \centering
-	\includegraphics[width=7cm]{imgs/ResultsNoCaptures.pdf}
+	\includegraphics[width=7cm]{imgs/lucas_et_al_figure6.pdf}
         \caption{Simulation model results of the accuracy and precision of four gREM submodels (NW1, SW1, SE3 and NE1) given different numbers of captures. The percentage error between estimated and true density within each gREM sub model for capture rate is shown within each box plot, where the black line represents the median percentage error across all simulations, boxes represent the middle 50\% of the data, whiskers represent variability outside the upper and lower quartiles with outliers plotted as individual points. Sensor and signal widths vary between submodels. The numbers beneath each plot represent the coefficient of variation. The colour of each box plot corresponds to the expressions for average profile width $\bar{p}$ given in Figure 4. }            
 	\label{f:Captures}
 \end{figure}
@@ -261,14 +261,14 @@ The percentage error in the density estimates across all parameters and gREM sub
 	\centering
 	\begin{subfigure}[t]{60mm}
       		\centering
-		\includegraphics[width=60mm]{imgs/ResultsPerch.pdf}
+		\includegraphics[width=60mm]{imgs/lucas_et_al_figure7a.pdf}
 		\caption{} 
          	 \label{f:Perch}
 	\end{subfigure}
 	
 	\begin{subfigure}[t]{60mm}
                 \centering
-		\includegraphics[width=60mm]{imgs/ResultsTort.pdf}
+		\includegraphics[width=60mm]{imgs/lucas_et_al_figure7b.pdf}
                 \caption{} 
                 \label{f:Tort}
          \end{subfigure}
@@ -323,8 +323,8 @@ We thank Hilde Wilkinson-Herbot, Chris Carbone, Francois Balloux, Andrew Cunning
 
 The code used in this paper is available on Github at \url{https://github.com/timcdlucas/lucasMoorcroftManuscript/tree/postPeerReview}.
 
-\bibliographystyle{mee.bst}	
-\bibliography{lucas-moorcroft-etal-refs.bib}	
+\bibliographystyle{lucas_et_al_tex_suppl_file_2015-01-20.bst}	
+\bibliography{lucas_et_al_tex_suppl_file_2015-01-20.bib}	
 
 \end{document}
 
