--- a/supplementary-material/lucas_et_al_supplementarymaterial_2015-01-20.tex
+++ b/supplementary-material/lucas_et_al_supplementarymaterial_2015-01-20.tex
@@ -202,17 +202,17 @@ These supplementary methods derive all the models used. For continuity, the gas 
 
 \vspace{1cm}
 
-\bibliographystyle{../mee.bst}	
-\bibliography{../lucas-moorcroft-etal-refs.bib}	
+\bibliographystyle{../lucas_et_al_tex_suppl_file_2015-01-20.bst}	
+\bibliography{../lucas_et_al_tex_suppl_file_2015-01-20.bib}	
 
 \clearpage
 \section{Supplementary Script: Symbolic algebra python script}
 
 \noindent This script uses the SymPy package \citep{sympy}, a computer algebra system to calculate the equations for $p$ in the various models and to perform unit checks on the results.
 \vspace{0.3cm}\\
-\noindent The script can also be found in the plain text file supplementaryS3Python.py. It will also be hosted and given a DOI on Github at the time of publication.
+\noindent The script can also be found in the plain text file \url{lucas_et_al_S3.py}. It will also be hosted and given a DOI on Github at the time of publication (\url{https://github.com/timcdlucas/lucasMoorcroftManuscript/tree/postPeerReview}).
 \vspace{0.5cm}
-\lstinputlisting{supplementaryS3Python.py}
+\lstinputlisting{lucas_et_al_S3.py}
 
 
 \clearpage
@@ -221,17 +221,17 @@ These supplementary methods derive all the models used. For continuity, the gas 
 
 \noindent This is an implementation of the models derived in the paper in R \citep{R}. Once given the parameters $\theta$ and $\alpha$ it automatically selects the correct model to apply.
 \vspace{0.3cm}\\
-\noindent The script can also be found in the plain text file supplementaryS4R.R. It will also be hosted and given a DOI on Github at the time of publication.
+\noindent The script can also be found in the plain text file \url{lucas_et_al_S4.R}. It will also be hosted and given a DOI on Github at the time of publication (\url{https://github.com/timcdlucas/lucasMoorcroftManuscript/tree/postPeerReview}).
 
 \vspace{0.5cm}
-\lstinputlisting{supplementaryS4R.R}
+\lstinputlisting{lucas_et_al_S4.R}
 
 \clearpage
 \section{Supplementary Information: Simulation model results of the gREM precision}
 \setcounter{figure}{0}    
 
 \begin{figure}[h!]
-	\includegraphics[width=7cm]{../imgs/ResultStandardDeviation.pdf}
+	\includegraphics[width=7cm]{imgs/ResultStandardDeviation.pdf}
 	\caption{Simulation model results of the gREM precision given a range of sensor and signal widths, shown by the standard deviation of the error between the estimated and true densities. Standard deviations are shown from deep red to pink, representing high to low values between $0.483\times10^{-6}$ to $3.74\times10^{-6}$. 
         } 
 	\label{f:StandardDeviation}
