--- a/lucas_et_al_mainms_2015-01-20.tex
+++ b/lucas_et_al_mainms_2015-01-20.tex
@@ -52,7 +52,7 @@
 
 \subsection*{ Running title: A generalised random encounter model for animals}
 
-\subsection*{ Word count:} 7164
+\subsection*{ Word count:} 7173
 
 \subsection*{ Authors:\\}
 Tim C.D. Lucas\textsuperscript{1,2,3}$\dagger$, Elizabeth A. Moorcroft\textsuperscript{1,4,5}$\dagger$, Robin Freeman\textsuperscript{5}, Marcus J. Rowcliffe\textsuperscript{5}, Kate E. Jones\textsuperscript{2,5}
@@ -316,7 +316,7 @@ The gREM will aid researchers to study species with non-invasive methods such as
 
 %%%% ------- Acknowledgments ---------%%%%
 \section*{Acknowledgments}
-We thank Hilde Wilkinson-Herbot, Chris Carbone, Francois Balloux, Andrew Cunningham, Steve Hailes, Richard Glennie and an anonymous referee for comments on previous versions of the manuscript. This study was funded through CoMPLEX PhD studentships at University College London supported by BBSRC and EPSRC (EAM and TCDL); The Darwin Initiative (Awards 15003, 161333, EIDPR075 to KEJ), and The Leverhulme Trust (Philip Leverhulme Prize for KEJ).
+We thank Hilde Wilkinson-Herbot, Chris Carbone, Francois Balloux, Andrew Cunningham, Steve Hailes, Richard Glennie and an anonymous referee for comments on previous versions of the manuscript. This study was funded through CoMPLEX PhD studentships at University College London supported by BBSRC and EPSRC (EAM and TCDL) and The Darwin Initiative (Awards 15003, 161333, EIDPR075), NERC (NE/H525003/1), and The Leverhulme Trust (Philip Leverhulme Prize) for KEJ.
 
 %%%% ------- Data Accessibility ---------%%%%
 \section*{Data Accessibility}
